# exif

./: .appveyor.yml  .cirrus.yml  .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  NEWS  README  SECURITY.md  autogen.sh  configure.ac  configure.in  exif.1  exif.spec.in
.github/workflows/: ci.yml  codeql.yml
exif/: .gitignore  Makefile.am  actions.c  actions.h  autogen.sh  configure.in  exif-i18n.c  exif-i18n.h  main.c  utils.c  utils.h
exif/exif/: Makefile.am  main.c
libjpeg/: Makefile.am  jpeg-data.c  jpeg-data.h  jpeg-marker.c  jpeg-marker.h
m4/: Makefile.am  gp-check-libexif.m4  gp-check-library.m4  gp-check-popt.m4  gp-config-msg.m4  gp-pkg-config.m4
m4m/: Makefile.am
po/: .gitignore  POTFILES.in  ast.po  cs.po  da.po  de.gmo  de.po  eo.po  es.po  fi.po  fr.po  fur.po  gl.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  ka.po  ko.po  lv.po  ms.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sr.po  sv.po  tr.po  uk.po  vi.po  zh_CN.po
test/: .gitignore  Makefile.am  check-add-tags.sh  check-create-tags.sh  check-help.sh  check-init-mandatory-tags.sh  check-no-seek.sh  check-param-validity.in  check-param-validity.sh  check-required-file.sh  check-show-description.sh  check-show-tag.sh  check-tag-description.sh  check-thumbnail.sh  check-vars.sh.in  check-version.sh
