EXTRA_DIST =
EXTRA_DIST += gp-byteorder.m4
EXTRA_DIST += gp-check-library.m4
EXTRA_DIST += gp-check-shell-environment.m4
EXTRA_DIST += gp-config-msg.m4
EXTRA_DIST += gp-documentation.m4
EXTRA_DIST += gp-gettext-hack.m4
EXTRA_DIST += gp-packaging.m4
EXTRA_DIST += gp-references.m4
EXTRA_DIST += stdint.m4
