# "exif" test scripts
# Only tests that work without image files should be found here.
# More complicated tests should be put into the libexif-testsuite module.

# check-vars.sh.in is automatically included
EXTRA_DIST = \
	check-add-tags.sh \
	check-create-tags.sh \
	check-help.sh \
	check-init-mandatory-tags.sh \
	check-no-seek.sh \
	check-param-validity.sh \
	check-required-file.sh \
	check-show-description.sh \
	check-show-tag.sh \
	check-tag-description.sh \
	check-thumbnail.sh \
	check-version.sh \
	testdata/no-exif.jpg

check_SCRIPTS = \
	check-add-tags.sh \
	check-create-tags.sh \
	check-help.sh \
	check-init-mandatory-tags.sh \
	check-no-seek.sh \
	check-param-validity.sh \
	check-required-file.sh \
	check-show-description.sh \
	check-show-tag.sh \
	check-tag-description.sh \
	check-thumbnail.sh \
	check-version.sh

TESTS = $(check_SCRIPTS)
